fixed some mistakes

--- a/Homework1.html
+++ b/Homework1.html
@@ -6,59 +6,58 @@
  </head>
 
  <body>
-  <div class="header">
+  <header>
     <h1>Page Header</h1>
     <h4>I love HTML5!</h4>  
-  </div>
+  </header>
 
-  <div class="layout">
-
-    <div class="col1">
+  <section>
+  
+    <nav>
       <center>
         <h3>Navigation Bar</h3>
       </center>
-      <nav>
-        <a href="url">Link text</a><br/>
-        <hr>
-        <a href="url">Link text</a><br/>
-        <hr>
-        <a href="url">Link text</a><br/>
-        <hr>
-      </nav>
-    </div>
+      <ul> <a href="url">Link text</a></ul>
+      <hr>
+      <ul><a href="url">Link text</a></ul>
+      <hr>
+      <ul><a href="url">Link text</a></ul>
+      <hr>
+    </nav>
 
-    <div class="col3">
+
+    <aside>
       <figure>
         <img src="pic.png" alt="" />
         <figcaption>figcaption</figcaption>
       </figure>
-    </div>
+    </aside>
 
-   <div class="col2">
+   <main>
      <article>
-       <div class="acticle_header"><h3>Article Header</h3></div>
+       <header><h3>Article Header</h3></header>
        <p>
           Firefox полностью поддерживает этот тег начиная с версии 4.0, 
           но версии 3.0 и старше также корректно отображают содержимое тега.
        </p>
-       <div class="acticle_footer"><h3>Article Footer</h3></div>
+       <footer><h3>Article Footer</h3></footer>
      </article>
 
      <div class="border"></div>
 
      <article>
-       <div class="acticle_header"><h3>Article Header</h3></div>
+       <header><h3>Article Header</h3></header>
        <p>
           Firefox полностью поддерживает этот тег начиная с версии 4.0, 
           но версии 3.0 и старше также корректно отображают содержимое тега.
        </p>
-       <div class="acticle_footer"><h3>Article Footer</h3></div>
+       <footer><h3>Article Footer</h3></footer>
      </article>
-    </div>
-  </div>
+    </main>
+  </section>
 
-  <div class="footer">
+  <footer>
     <h1>Page Footer</h1>
-  </div>
+  </footer>
  </body>
 </html>
